# jetsonorin-utils

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: lint.yml  test.yml
src/: __main__.py  stream.py
src/detection/: __init__.py  detector.py  face_detector.py  motion_detector.py  yolo_backend.py
tests/: test_api.py
